--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,3 +30,29 @@ a{
     max-width: 100rem;
     margin: 0 auto;
     padding: 0 1.5rem; }
+.loader{
+  position: absolute;
+  left: calc(50% -28px);
+  width: 56px;
+  height: 56px;
+  border: 4px solid #0052ec;
+  border-radius: 50%;
+  position: relative;
+  animation: loader-scale 1s ease-out infinite;
+  top: 50%;
+  margin: -28px auto 0;
+
+  &-wrap{
+    width: 100vw;
+    height: 100vh;
+  }
+}
+@keyframes loader-scale {
+  0% {
+    transform: scale(0);
+    opacity: 0; }
+  50% {
+    opacity: 1; }
+  100% {
+    transform: scale(1);
+    opacity: 0; } }
